# sdk-python

./: .gitignore  Makefile  README.md  act-secrets.example  example.py  pyproject.toml
.github/workflows/: publish.yml
alphahuman_memory/: __init__.py  async_client.py  client.py  types.py
scripts/: __init__.py  bump_version.py  push-tag-event.json  run_act_publish.py
tinyhumansai/: __init__.py  async_client.py  client.py  llm.py  types.py
