[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphahuman-memory"
version = "0.1.0"
description = "Python SDK for Alphahuman Memory API - ingest and delete memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy"]
