[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyhumansai"
version = "0.5.0"
description = "Python SDK for TinyHumans API - ingest and delete memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff"]
examples = ["python-dotenv>=1.0"]

[project.scripts]
run-act-publish = "scripts.run_act_publish:main"

[tool.setuptools.packages.find]
include = ["tinyhumansai*", "scripts*"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["tinyhumansai", "scripts"]
